# swarm

./: .env-template  .gitignore  README.md  marv.py  pyproject.toml  requirements.txt
experiment/: script.py
swarm/: __main__.py  main.py
tests/: generate_swarm_data.py  helpers.py  test_main.py  visualize_data.py
