[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.13",
    "marvin>=2.3.7",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "python-decouple>=3.8",
    "supabase>=2.7.4",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
